--- a/hamburger-button/style.css
+++ b/hamburger-button/style.css
@@ -12,3 +12,48 @@ body{
     margin: 0;
     min-height: 100vh;
 }
+
+button{
+    background-color: pink;
+    border: none;
+    color: white;
+    position: fixed;
+    top:20px;
+    right: 20px;
+    padding: 1rem;
+    transition: transform 0.3s ease-in;
+
+}
+
+button.active{
+    transform: translateX(-100px);
+}
+
+nav{
+   position: fixed;
+   height: 100vh;
+   top: 0;
+   right: 0;
+   background-color: pink;
+   padding: 2rem;
+   transform: translateX(100%);
+}
+
+nav.active{
+    transform: translateX(0);
+}
+
+nav ul{
+    padding: 0;
+    list-style-type: none;
+    margin:0;
+}
+
+nav ul li{
+    padding: 1rem 0;
+}
+
+nav a{
+    color:  white;
+    text-decoration: none;
+}
