--- a/hamburger-button/style.css
+++ b/hamburger-button/style.css
@@ -21,8 +21,12 @@ button{
     top:20px;
     right: 20px;
     padding: 1rem;
-    transition: transform 0.3s ease-in;
+    transition: transform 0.3s ease-in-out;
 
+}
+
+button:hover{
+    cursor: pointer;
 }
 
 button.active{
